[tool.poetry]
name = "fastapi-gql"
version = "0.0.1"
description = "Sample GraphQL Application with FastAPI + Strawberry + EdgeDB, OPA(Open Policy Agent)"
authors = ["Haze Lee <hazelee@realignist.me>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
